--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-top: 1rem;
+    margin-top: 0.3rem;
 }
 
 .buttons > button{
@@ -88,10 +88,12 @@ body{
     background-color: white;
     border-color: #4d5b9e;
     border-radius: 0.7rem;
-    color: #293263
+    color: #293263;
+    min-width: 100px;
+    margin: 5px;
 }
 
-.question > h1{
+.question{
     margin: 1%;
     color: #293263;
     margin-top: 1rem;
@@ -105,6 +107,32 @@ body{
     margin: 1.5rem 
 }
 
+.quizPage > button:hover{
+    background: #c0caff;
+}
+
+.but:hover{
+    background: #c0caff;
+}
+
 .buttons > button:hover{
     background: #c0caff;
+}
+
+.quizPage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quizPage > button{
+    font-family: 'Roboto', sans-serif;
+    font-size: large;
+    font-weight: bold;
+    width: 20rem;
+    height: 3rem;
+    background-color: #f5f7fd;
+    border-width: 2px;
+    border-color: #4d5b9e;
+    border-radius: 8px;
 }
